--- a/projects/overdose/charts/pie-three.html
+++ b/projects/overdose/charts/pie-three.html
@@ -31,7 +31,7 @@ margin:0px;
 
         
         var options = {
-          colors: ['#f2f0f7', '#cbc9e2', '#9e9ac8', '#756bb1', '#54278f'],
+          colors: ['#319dd4', '#5bb1dc', '#85c5e5', '#afd9ee', '#d9edf7'],
           legend: 'none',
           chartArea: {width:"100%", left:0},
           tooltip: {text: 'value'}
