--- a/projects/overdose/charts/methadone.html
+++ b/projects/overdose/charts/methadone.html
@@ -37,9 +37,9 @@ margin:0px;
 [7, 1977310, '<div class="tip"><strong>2009 Q3:</strong> 1,977,310 units</div>', 0, ''],
 [8, 2158105, '<div class="tip"><strong>2009 Q4:</strong> 2,158,105 units</div>', 0, ''],
 [9, 1855404, '<div class="tip"><strong>2010 Q1:</strong> 1,855,404 units</div>', 0, ''],
-[10, 2076943, '<div class="tip"><strong>2010 Q2:</strong> 2,076,943 units</div>', 0, ''],
+[10, 2076943, '<div class="tip"><strong>2010 Q2:</strong> 2,076,943 units</div>', 2400000, '<div class="tip">May, June 2010: Governor signs bill requiring mandatory PMP checks for methadone prescriptions; law takes effect in November.</div>'],
 [11, 1807591, '<div class="tip"><strong>2010 Q3:</strong> 1,807,591 units</div>', 0, ''],
-[12, 1805058, '<div class="tip"><strong>2010 Q4:</strong> 1,805,058 units</div>', 2400000, '<div class="tip">November 2010: Mandatory check of PMP for methadone prescriptions takes effect.</div>'],
+[12, 1805058, '<div class="tip"><strong>2010 Q4:</strong> 1,805,058 units</div>', 0, ''],
 [13, 1752302, '<div class="tip"><strong>2011 Q1:</strong> 1,752,302 units</div>', 0, ''],
 [14, 1800636, '<div class="tip"><strong>2011 Q2:</strong> 1,800,636 units</div>', 0, ''],
 [15, 1858740, '<div class="tip"><strong>2011 Q3:</strong> 1,858,740 units</div>', 0, ''],
@@ -61,7 +61,7 @@ margin:0px;
           vAxis: {title: "Cups", maxValue: 2400000},
           hAxis: { gridlines: { color: 'transparent' }, ticks: [{v:1, f:'2008'}, {v:5, f:'2009'}, {v:9, f:'2010'}, {v:13, f:'2011'}, {v:17, f:'2012'}, {v:21, f:'2013'}]},
           seriesType: "line",
-          chartArea: {width: '100%', left: 150},
+          chartArea: {width:'100%', left:100},
           vAxis: {title: 'Dosage Units'},
           curveType: 'function',
           series: {1: {type: "bars"}},
