--- a/projects/overdose/charts/methadone.html
+++ b/projects/overdose/charts/methadone.html
@@ -37,7 +37,7 @@ margin:0px;
 [7, 1977310, '<div class="tip"><strong>2009 Q3:</strong> 1,977,310 units</div>', 0, ''],
 [8, 2158105, '<div class="tip"><strong>2009 Q4:</strong> 2,158,105 units</div>', 0, ''],
 [9, 1855404, '<div class="tip"><strong>2010 Q1:</strong> 1,855,404 units</div>', 0, ''],
-[10, 2076943, '<div class="tip"><strong>2010 Q2:</strong> 2,076,943 units</div>', 2400000, '<div class="tip"><strong>May, June 2010:</strong> Governor signs bill requiring PMP checks for methadone prescriptions; the law took effect in November.</div>'],
+[10, 2076943, '<div class="tip"><strong>2010 Q2:</strong> 2,076,943 units</div>', 2400000, '<div class="tip"><strong>May, June 2010:</strong> Legislature approves and governor signs bill requiring PMP checks for methadone prescriptions; the law took effect in November.</div>'],
 [11, 1807591, '<div class="tip"><strong>2010 Q3:</strong> 1,807,591 units</div>', 0, ''],
 [12, 1805058, '<div class="tip"><strong>2010 Q4:</strong> 1,805,058 units</div>', 0, ''],
 [13, 1752302, '<div class="tip"><strong>2011 Q1:</strong> 1,752,302 units</div>', 0, ''],
