add source line

--- a/projects/disaster/table/index.html
+++ b/projects/disaster/table/index.html
@@ -1018,6 +1018,9 @@ html, body {padding:0; margin:0;}
     </tr>
   </tbody>
 </table>
+
+<p class="small">Source: Federal Emergency Management Agency</p>
+
 </div>
 
 </div>
