--- a/projects/disaster/table/index.html
+++ b/projects/disaster/table/index.html
@@ -1029,6 +1029,7 @@ html, body {padding:0; margin:0;}
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://www.oklahomawatchdata.org/static/js/jquery.tablesorter.min.js"></script>
 <script>
+
   $.tablesorter.addParser({
         id: "money",
         is: function (s) {
@@ -1047,7 +1048,18 @@ html, body {padding:0; margin:0;}
 			3: { sorter: 'money' }
         }
     });
-</script>
+
+    /*
+ jQuery Plugin: Table Filter v0.2.3
+
+ LICENSE: http://hail2u.mit-license.org/2009
+*/
+(function(a){a.fn.addTableFilter=function(d){var b=a.extend({},a.fn.addTableFilter.defaults,d),c,e;this.is("table")&&(this.attr("id")||this.attr({id:"t-"+Math.floor(99999999*Math.random())}),c=this.attr("id"),d=c+"-filtering",e=a("<label/>").attr({"for":d}).append(b.labelText),b=a('<input type="text" class="form-control" style="width:99%; margin:0;" placeholder="Filter results ..." />').attr({id:d,size:b.size}).on("click",function(){a(this).keyup()}),a("<p/>").addClass("formTableFilter").append(e).append(b).insertBefore(this),a("#"+d).delayBind("keyup",function(b){var d=a(this).val().toLowerCase().split(" ");
+a("#"+c+" tbody tr").each(function(){var b=a(this).html().toLowerCase().replace(/<.+?>/g,"").replace(/\s+/g," "),c=0;a.each(d,function(){if(0>b.indexOf(this))return c=1,!1});c?a(this).hide():a(this).show()})},300));return this};a.fn.addTableFilter.defaults={labelText:"",size:32};a.fn.delayBind=function(d,b,c,e){a.isFunction(b)&&(e=c,c=b,b=void 0);var g=this,f=null;return this.bind(d,b,function(b){clearTimeout(f);f=setTimeout(function(){c.apply(g,[a.extend({},b)])},e)})}})(jQuery);
+
+$("table").addTableFilter();
+
+    </script>
 
 </body>
 </html>
