--- a/projects/disaster/flow/index.html
+++ b/projects/disaster/flow/index.html
@@ -12,7 +12,8 @@
 html, body {margin:0; padding:0; height:100%; width:100%;}
 .sub {color:#ccc; text-transform:uppercase; font-size:1.2em;}
 #legend {font-family:Arial; text-transform:uppercase; font-weight:bold;}
-#legend a {color:inherit;}
+#legend span {cursor:pointer; cursor: hand;}
+#legend span:hover {text-decoration:underline;}
 .entry {margin-bottom:4em;}
 </style>
 
