--- a/projects/hazard/projects/index.html
+++ b/projects/hazard/projects/index.html
@@ -22,7 +22,7 @@ html, body {padding:0; margin:0;}
 <div id="main" style="width:100%;">
 
 <h2>Risk-Reduction Projects</h2>
-<p>By early June, because of Disaster 4117 storms, the federal government had approved grants totaling nearly $4 million, or about three-fourths of the cost, to pay for 21 hazard mitigation projects plus the costs of state management services. Grantees paid the rest.</p>
+<p>By early June, because of Disaster 4117 storms, the federal government had approved grants totaling nearly $4 million, or about three-fourths of the cost, to pay for 21 hazard mitigation projects plus the costs of state management services. Grantees will pay the rest.</p>
 
 <div class="table-responsive">
 <table id="dis" class="table tablesorter">
