disable panning and zooming

--- a/projects/crime-map/index.html
+++ b/projects/crime-map/index.html
@@ -155,6 +155,12 @@ L.tileLayer('http://a.tile.stamen.com/toner/{z}/{x}/{y}.png', {
 	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY SA</a>.'
 }).addTo(map);
 
+map.dragging.disable();
+map.touchZoom.disable();
+map.doubleClickZoom.disable();
+map.scrollWheelZoom.disable();
+if (map.tap) map.tap.disable();
+
     for (var i=0;i<cities.features.length;i++) {
         var option = document.createElement("option");
         option.value = cities.features[i].properties.city;
