--- a/projects/crime-map/index.html
+++ b/projects/crime-map/index.html
@@ -35,6 +35,12 @@ html, body { margin-bottom:2em; }
             
 .killit {font-size:150%; font-family:Helvetica Neue, Helvetica, Arial, sans-serif; text-align:center; color:#78c3f0; margin:0.5em;}
 
+@media (max-width: 760px) {
+  #map {
+    display: none;
+  }
+}
+
 </style>
 
 </head>
