--- a/projects/okc-pov/index.html
+++ b/projects/okc-pov/index.html
@@ -153,9 +153,9 @@ var redtracts = ["1026", "1027", "1028", "1029", "1030", "1013", "1014", "1015",
             var outline = ''
                 , q = '';
             if ( $.inArray( feature.properties.NAME, redtracts ) > -1 )
-                { outline = "#d73027";
-                  q = 3}
-            else { outline = "#fff";
+                { outline = "#000";
+                  q = 2}
+            else { outline = "#eee";
                    q = 1};        
 			return {
 				weight: q,
