--- a/projects/okc-pov/index.html
+++ b/projects/okc-pov/index.html
@@ -153,7 +153,7 @@ var redtracts = ["1026", "1027", "1028", "1029", "1030", "1013", "1014", "1015",
             var outline = ''
                 , q = '';
             if ( $.inArray( feature.properties.NAME, redtracts ) > -1 )
-                { outline = "#000";
+                { outline = "#d73027";
                   q = 2}
             else { outline = "#eee";
                    q = 1};        
