--- a/projects/school-maps/index.html
+++ b/projects/school-maps/index.html
@@ -9,19 +9,41 @@
   </head>
 
   <body>
+    <div class="row">
+      <div class="c g3 sidebar">
+        <div class='sidebar-inner'>
+          <h4 style='margin:0;'>Find a school</h4>
+          <p id='loading' style='font-style: italic; margin: 0;'>
+            Loading ...
+          </p>
+          <input type='text' id='search' style='width:70%; float:left; margin: 7px auto 7px auto;' />
+          <button id='submit' style='width:30%; margin-top: 7px;'>Go</button>
+          <fieldset>
+          <legend>Map view</legend>
+          <input id="has_course" type="radio" name="courses" value="1">
+          <label for="has_course">Offers course</label><br>
+          <input id="doesnt" type="radio" name="courses" value="2">
+          <label for="doesnt">Doesn't offer course</label><br>
+          <input id="both" type="radio" name="courses" value="3" checked="checked">
+          <label for="both">Both</label>
+          </fieldset>
+        </div>
+      </div>
+      <div class="c g3-2">
+        <h1 style="margin-top:0;">Calculus</h1>
+        <div id='map1' class='map'></div>
+        <h1>Physics</h1>
+        <div id='map3' class='map'></div>
+      </div>
+    </div>
 
-  <p id='loading' style='font-style: italic;'>Loading ...</p>
 
-  <div id='main'>
-    <h1>Calculus</h1>
-    <div id='map1' class='map'></div>
+    <!--
     <h1>Algebra 2</h1>
     <div id='map2' class='map'></div>
-    <h1>Physics</h1>
-    <div id='map3' class='map'></div>
     <h1>Chemistry</h1>
     <div id='map4' class='map'></div>
-  </div>
+    -->
 
   <script src='scripts.js'></script>
   </body>
