--- a/projects/school-maps/index.html
+++ b/projects/school-maps/index.html
@@ -18,21 +18,22 @@
           </p>
           <input type='text' id='search' style='width:70%; float:left; margin: 7px auto 7px auto;' />
           <button id='submit' style='width:30%; margin-top: 7px;'>Go</button>
+          <div class='row'></div>
           <fieldset>
-          <legend>Map view</legend>
-          <input id="has_course" type="radio" name="courses" value="1">
-          <label for="has_course">Offers course</label><br>
-          <input id="doesnt" type="radio" name="courses" value="2">
-          <label for="doesnt">Doesn't offer course</label><br>
-          <input id="both" type="radio" name="courses" value="3" checked="checked">
-          <label for="both">Both</label>
+            <legend>Map view</legend>
+            <input id="has_course" type="radio" name="courses" value="1">
+            <label for="has_course">Offers course</label><br>
+            <input id="doesnt" type="radio" name="courses" value="2">
+            <label for="doesnt">Doesn't offer course</label><br>
+            <input id="both" type="radio" name="courses" value="3" checked="checked">
+            <label for="both">Both</label>
           </fieldset>
         </div>
       </div>
       <div class="c g3-2">
-        <h1 style="margin-top:0;">Calculus</h1>
+        <h2>Calculus</h1>
         <div id='map1' class='map'></div>
-        <h1>Physics</h1>
+        <h2>Physics</h1>
         <div id='map3' class='map'></div>
       </div>
     </div>
